Successful http request and data parse

--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Wind</title>
-  <script src="wind.js"></script>
+  <script src="bundle.js"></script>
 </head>
 <body>
-  
   
 <div>Wind App</div>
 
