Wrote out D3 for a single line graph

--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
   <title>Wind</title>
   <script src="bundle.js"></script>
 </head>
-<body>
-  
+<body>  
 <div>Wind App</div>
-
+<div id="my_dataviz"></div>
 
 </body>
 </html>
