Functioning graph with functioning wind data import; graph not yet connected with wind data

--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Wind</title>
-  <script src="bundle.js"></script>
+  <script src="https://d3js.org/d3.v4.js"></script>
+  
 </head>
 <body>  
-<div>Wind App</div>
-<div id="my_dataviz"></div>
+  <div>Wind App</div>
+  <div id="my_dataviz"></div>
+  <script src="bundle.js"></script>
+  
 
 </body>
 </html>
