--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <body>  
   <div>Wind App</div>
   <div id="my_dataviz"></div>
-  <script src="bundle.js"></script>
-  
+  <script src="lineChart.js"></script>
 
 </body>
 </html>
