--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Wind</title>
   <script src="https://d3js.org/d3.v4.js"></script>
-  
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>  
-  <div>Wind App</div>
+  <h1>The Wind App</h1>
   <div id="my_dataviz"></div>
-  <script src="lineChart.js"></script>
+  <script src="lineChart6.js"></script>
 
 </body>
 </html>
