Styled main page

--- a/index.html
+++ b/index.html
@@ -6,11 +6,21 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Wind</title>
   <script src="https://d3js.org/d3.v4.js"></script>
+  <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 </head>
-<body>  
-  <h1>The Wind App</h1>
-  <div id="my_dataviz"></div>
+<body> 
+
+  <div>
+  <h1>Wind</h1>
+  
+  </div>
+  <div class="console-and-data">
+    <div class="console">User Console</div>
+    <div class="graph" id="my_dataviz"></div>
+  </div>
+
   <script src="lineChart6.js"></script>
 
 </body>
