--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
   
   </div>
   <div class="console-and-data">
-    <div class="console">User Console</div>
+    <div class="console">
+      <h3>Data Parameters</h3>
+      <select id="selectButton"></select>
+    </div>
     <div class="graph" id="my_dataviz"></div>
   </div>
 
-  <script src="lineChart6.js"></script>
+  <script src="lineChart7.js"></script>
 
 </body>
 </html>
