Delete unnecessary files

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="graph" id="my_dataviz"></div>
   </div>
 
-  <script src="lineChart7.js"></script>
+  <script src="lineChart.js"></script>
 
 </body>
 </html>
