Add location on page, style accordingly

--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@
 </head>
 <body> 
 
-  <div>
-  <h1>Wind</h1>
-  
+  <div class="header">
+    <h1>Windspeed Over Time</h1>
+    <h2>Fort Point, San Francisco, CA</h2>
   </div>
+
   <div class="console-and-data">
     <div class="console">
-      <h3>Data Parameters</h3>
+      <h3 class="console-title">Data Parameters</h3>
       <select id="selectButton"></select>
+    
+    
     </div>
     <div class="graph" id="my_dataviz"></div>
   </div>
