Wrote niceDate for presentation friendly date

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <div class="console-and-data">
     <div class="console">
-      <h3 class="console-title">Data Parameters</h3>
+      <h3 class="console-title">Select a Day:</h3>
       <select id="selectButton"></select>
     
     
