Add event listener, logic for checkboxes, unsuccessful test

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h3 class="console-subtitle">Display Selected Data:</h3>
       <div class="console-data-panel">
 
-        <input type="checkbox" name="myCheckBox">
+        <input type="checkbox" name="myCheckBox" value="currentDay">
         <label class="checkbox-label" for="myCheckBox">Today's Windspeed</label>
         
         <input type="checkbox" name="myCheckBox">
