--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <label class="checkbox-label" for="myCheckBox">Average Windspeed</label>
         </div>
       
-      <h3 class="console-subtitle compare">Comparative Data:</h3>
+      <h3 class="console-subtitle compare">Previous Days' Data:</h3>
 
       <div class="console-data-panel">
       
