Add allwinddata, separate data parsing from data rendering, test successfully

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <label class="checkbox-label" for="myCheckBox">Average Windspeed</label>
         </div>
       
-      <h3 class="console-subtitle not-first">Previous Days' Data:</h3>
+      <h3 class="console-subtitle not-first">Previous Day's Data:</h3>
 
       <div class="console-data-panel">
       
@@ -72,7 +72,7 @@
   </div>
 
 
-  
+  <script src="parse.js"></script>
   <script src="lineChart.js"></script>
 </body>
 </html>
