Write switch statement for checkbox interactivity; allow for lower transparency on allWindData

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       <div class="console-data-panel">
       
-        <input type="checkbox" class="checkbox" value=2>
+        <input type="checkbox" class="checkbox" value=2 checked>
         <label class="checkbox-label" for="myCheckBox">Show a Previous Day</label>
       
         <label for="compare-day"></label>
