Create modal and basic styling

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 </head>
 <body> 
 
+  <div class="modal">
+    <div class="modal-child">Hey, this is the modal child</div>
+  </div>
+
   <div class="header">
     <h1>Windspeed Over Time</h1>
     <h2>Fort Point, San Francisco, CA</h2>
