--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       <p class="quote byline">-Mark Twain</p> 
       <p class="description" >While the origins of the above quote are cloudy, the meaning is quite clear,
         and especially to sailors heading out to sea.  In the context of wind direction and strength,
-        the phenomena of autocorrelation applies:  the conditions for today are highly likely
-        to be similar to those of yesterday.  If it was breezy yesterday, then it's likely to be breezy today.
-        This can be enormously helpful to a sailor selecting a sail for the day...it can
-        be just as helpful to anyone selecting a jacket for the day.
+        the conditions for today are highly likely to "rhyme"
+        with those of yesterday.  In other words, if it was breezy yesterday, then it's likely to be breezy today.
+        This can be enormously helpful to a sailor selecting a safety gear for the day...it can
+        be just as helpful to anyone selecting a jacket for the day.  Toggle the controls on the left
+        for a different view of the data, all while trying to spot a parallel ("rhyme?") in the data.
       </p>
-      <p>Directions:</p>
-      <button id="close-button" class="animate-button">close</button>
+      <button id="close-button">close</button>
 
     </div>
   </div>
