Add all wind regression line checkbox

--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
       <div class="console-data-panel">
         <input type="checkbox" class="checkbox" value=4>
         <label class="checkbox-label" for="myCheckBox">All Data Points</label>
+      
+        <input type="checkbox" class="checkbox" value=5>
+        <label class="checkbox-label" for="myCheckBox">All Data Regression Line</label>
       </div>
 
     </div>
