Update splash page text

--- a/index.html
+++ b/index.html
@@ -18,13 +18,22 @@
     <div id="modal-child" class="modal-child">
       <p class="quote">"History doesn't repeat itself, but it often rhymes."</p>
       <p class="quote byline">-Mark Twain</p> 
-      <p class="description" >While the origins of this quote are cloudy, the meaning is quite clear,
-        and especially to sailors heading out to sea.  In the context of wind direction and strength,
-        the conditions for today are likely to "rhyme"
-        with those of yesterday.  In other words, if there were high winds yesterday, then it's likely there will be high winds today.
-        This can be enormously helpful to a sailor selecting a sail for the day--or just as helpful to anyone debating on a jacket for the day.
-        Toggle the controls on the left for a different view of the data, all while trying to spot a parallel ("rhyme?") in the data.
+      <p class="description">Wind is autocorrelated.  That is, wind is correlated with itself.
+        That means that if it is windy today, it'll likely be windy tomorrow.  In this way, the wind conditions of today
+        "rhyme" with those of the previous day, to borrow from Twain's quote above.</p><br>
+      <p class="description">
+        This application, Windspeed Over Time, allows a user to view and compare windspeed data from different time periods.
+        The most obvious comparison is between today's wind (already in progress) and yesterday's wind. With some reliability, the visual comparison between
+        the two will give some clue as to what the future holds, and the user can predict what the wind strength <i>will</i> be for the remainder of the day.</p><br>
+      <p class="description">
+        But there are other points of comparison available in the application.  The user may view the windspeed from other days, aside from yesterday.  The user may view
+        all days in the data set -- some six months worth of data.  By looking at the data from different aspects, the user can then have a better
+        idea of what is a normal, average, or typical wind pattern -- e.g. generally speaking, the wind may be light in the morning, heavy in the afternoon. 
+      </p><br>
+      <p class="description">You may be the sailor deciding whether to go with the big sail (for light wind) or the small sail (for heavy wind). Or you may be someone
+        who wants to know which jacket to wear for the evening walk.  Either way, this app aims to help you predict the wind.
       </p>
+
       <button id="close-button">close</button>
 
     </div>
