Add logic for spinner while graph is loading

--- a/index.html
+++ b/index.html
@@ -113,9 +113,13 @@
       </div>
   
     </div>
-
-      <div class="graph" id="my_dataviz"></div>
-  
+      <div id="loader"></div>
+      <div
+        class="graph"
+        id="my_dataviz"
+        onload="showGraph()"
+        style="display:none;">
+      </div>
   </div>
 
 
