Loader rendering on page, not yet styled

--- a/index.html
+++ b/index.html
@@ -113,12 +113,14 @@
       </div>
   
     </div>
+      <div class="loader-and-graph">
       <div id="loader"></div>
-      <div
+      <!-- <div
         class="graph"
         id="my_dataviz"
         onload="showGraph()"
         style="display:none;">
+      </div> -->
       </div>
   </div>
 
