--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@
     </div>
       <div class="loader-and-graph">
       <div id="loader"></div>
-      <!-- <div
+      <div
         class="graph"
         id="my_dataviz"
         onload="showGraph()"
         style="display:none;">
-      </div> -->
+      </div>
       </div>
   </div>
 
