--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
 </head>
-<body> 
+<body onload="delayLoad()"> 
 
   <div id="modal" class="modal">
     <div id="modal-child" class="modal-child">
@@ -118,7 +118,6 @@
       <div
         class="graph"
         id="my_dataviz"
-        onload="showGraph()"
         style="display:none;">
       </div>
       </div>
