Add intro modal to index.html

--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
 </head>
 <body onload="delayLoad()"> 
 
+  <div id="intro-modal" class="intro-modal">
+    <div id="intro-modal-child" class="intro-modal-child">
+      What's up doc?
+    </div>
+  </div>
+
+
   <div id="modal" class="modal">
     <div id="modal-child" class="modal-child">
       <p class="quote">"History doesn't repeat itself, but it often rhymes."</p>
