Add intro modal and intro modal styling

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <div id="intro-modal-child" class="intro-modal-child">
       What's up doc?
     </div>
+    <button id="intro-modal-button">close</button>
   </div>
 
 
