Add intro png which describes the tool, add styling to modals

--- a/index.html
+++ b/index.html
@@ -20,9 +20,13 @@
 
   <div id="intro-modal" class="intro-modal">
     <div id="intro-modal-child" class="intro-modal-child">
-      What's up doc?
+      <p class="description">Wind Predictor is autocorrelated. That is, wind is correlated with itself.
+        That means that if it is windy today, it'll likely be windy tomorrow. In this way, the wind conditions of today
+        "rhyme" with those of the previous day, to borrow from Twain's quote above.</p><br>
+      
+      <button id="intro-modal-button">close</button>
     </div>
-    <button id="intro-modal-button">close</button>
+    
   </div>
 
 
@@ -52,7 +56,7 @@
   </div>
 
   <div class="header">
-    <h1>Windspeed Over Time</h1>
+    <h1>Windspeed Predictor</h1>
     <h2 id="about-button">About the App</h2>
   </div>
 
