First draft of modal copy

--- a/index.html
+++ b/index.html
@@ -20,11 +20,15 @@
 
   <div id="intro-modal" class="intro-modal">
     <div id="intro-modal-child" class="intro-modal-child">
-      <p class="description">Wind Predictor is autocorrelated. That is, wind is correlated with itself.
-        That means that if it is windy today, it'll likely be windy tomorrow. In this way, the wind conditions of today
-        "rhyme" with those of the previous day, to borrow from Twain's quote above.</p><br>
-      
-      <button id="intro-modal-button">close</button>
+      <p class="quote">"Wind Predictor can help you predict the wind!"</p>
+      <p class="description">On most days, the wind for today will be similar to the wind of yesterday.
+        Thus, if you overlay the wind speed over time from yesterday on a graph with the wind speed for today,
+        you may be lucky enough to spot a pattern.  See the example below.  Can you spot a pattern?  
+      </p>
+
+      <img src="intro" alt="screenshot-of-wind-predictor">
+
+      <button id="intro-modal-button">Discover More!</button>
     </div>
     
   </div>
