Modal displays, copy good, additional styling needed

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 
   <div id="intro-modal" class="intro-modal">
     <div id="intro-modal-child" class="intro-modal-child">
-      <p class="quote">"Wind Predictor can help you predict the wind!"</p>
+      <p class="quote">Wind Predictor can help you predict the wind!</p><br>
       <p class="description">On most days, the wind for today will be similar to the wind of yesterday.
         Thus, if you overlay the wind speed over time from yesterday on a graph with the wind speed for today,
         you may be lucky enough to spot a pattern.  See the example below.  Can you spot a pattern?  
-      </p>
+      </p><br>
 
-      <img src="intro" alt="screenshot-of-wind-predictor">
+      <img src="intro.png" alt="screenshot-of-wind-predictor">
 
       <button id="intro-modal-button">Discover More!</button>
     </div>
