Reduce size of intro png, additional styling

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <div id="intro-modal-child" class="intro-modal-child">
       <p class="quote">Wind Predictor can help you predict the wind!</p><br>
       <p class="description">On most days, the wind for today will be similar to the wind of yesterday.
-        Thus, if you overlay the wind speed over time from yesterday on a graph with the wind speed for today,
+        Thus, if you overlay the wind speed over time from yesterday on a graph with the wind speed over time for today,
         you may be lucky enough to spot a pattern.  See the example below.  Can you spot a pattern?  
       </p><br>
 
-      <img src="intro.png" alt="screenshot-of-wind-predictor">
+      <img src="intro_reduced_size.png" alt="screenshot-of-wind-predictor">
 
       <button id="intro-modal-button">Discover More!</button>
     </div>
@@ -60,7 +60,7 @@
   </div>
 
   <div class="header">
-    <h1>Windspeed Predictor</h1>
+    <h1>Wind Predictor</h1>
     <h2 id="about-button">About the App</h2>
   </div>
 
