Edit copy on about modal

--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
       <p class="quote byline">-Mark Twain</p> 
       <p class="description">Wind is autocorrelated.  That is, wind is correlated with itself.
         That means that if it is windy today, it'll likely be windy tomorrow.  In this way, the wind conditions of today
-        "rhyme" with those of the previous day, to borrow from Twain's quote above.</p><br>
+        "rhyme" with those of the previous day...to borrow from Twain's quote above.</p><br>
       <p class="description">
-        This application, Windspeed Over Time, allows a user to view and compare windspeed data from different time periods.
+        Wind Predictor allows a user to view and compare windspeed data from different time periods.
         The most obvious comparison is between today's wind (already in progress) and yesterday's wind. With some reliability, the visual comparison between
-        the two will give some clue as to what the future holds, and the user can predict what the wind strength <i>will</i> be for the remainder of the day.</p><br>
+        the two will give some clue as to what the future holds, and the user can predict what the wind strength <i>will be</i> for the remainder of the day.</p><br>
       <p class="description">
-        There are other points of comparison available in the application.  The user may view the windspeed from other days, aside from yesterday.  The user may view
+        There are other points of comparison available in the Wind Predictor.  The user may view the windspeed from other days, aside from yesterday.  The user may view
         all days in the data set -- 45 days worth of data.  By looking at the data from different aspects, the user can then have a better
-        idea of what is a normal, average, or typical wind pattern -- e.g. generally speaking, the wind may be light in the morning, heavy in the afternoon. 
+        idea of what is a normal, average, or typical wind pattern -- e.g. generally speaking, the wind may be light in the morning and heavy in the afternoon.
       </p><br>
       <p class="description">You may be the sailor deciding whether to go with the big sail (for light wind) or the small sail (for heavy wind). Or you may be someone
         who wants to know which jacket to wear for the evening walk.  Either way, this app aims to help you predict the wind.
