--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         you may be lucky enough to spot a pattern.  See the example below.  Can you spot a pattern?  
       </p><br>
 
-      <img src="intro_reduced_size.png" alt="screenshot-of-wind-predictor">
+      <img class="intro-img" src="intro_reduced_size.png" alt="screenshot-of-wind-predictor">
 
       <button id="intro-modal-button">Discover More!</button>
     </div>
