Change URL tab title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Windspeed Over Time</title>
+  <title>Windspeed Predictor</title>
   <script src="https://d3js.org/d3.v4.js"></script>
   <script src="https://unpkg.com/d3-regression@1.2.8/dist/d3-regression.min.js"></script>
   <link rel="stylesheet" href="reset.css">
